8296812: sprintf is deprecated in Xcode 14